--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -82,7 +82,9 @@
     <ClInclude Include="btree.h" />
     <ClInclude Include="dllist.h" />
     <ClInclude Include="list.h" />
+    <ClInclude Include="queuee.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="steak.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -90,10 +92,12 @@
     <ClCompile Include="ConsoleApplication1.cpp" />
     <ClCompile Include="dllist.cpp" />
     <ClCompile Include="list.cpp" />
+    <ClCompile Include="queuee.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="steak.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
